# kaos-ml-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  compat.yml  min-deps.yml  quality.yml  release.yml  scorecard.yml  security-full.yml  security-light.yml  security.yml  test.yml
docs/standards/: code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  rust-pyo3-design-and-architecture.md  tests-fixtures-ci.md
python/kaos_ml_core/: __init__.py  __main__.py  _version.py  aggregate.py  cli.py  cluster.py  corpus.py  errors.py  features.py  index.py  label.py  metrics.py  pipeline.py  predict.py  serve.py  settings.py  split.py  threshold.py  tools.py  train.py
python/kaos_ml_core/_rust/: __init__.pyi
rust/: lib.rs
rust/bindings/: mod.rs  version.rs
rust/core/: mod.rs  version.rs
tests/benchmarks/: test_corpus_benchmarks.py
tests/fixtures/: README.md  usc_corpus.py
tests/integration/: _usc_helpers.py  test_corpus_index_persistence.py  test_usc_cold_start_endtoend.py  test_usc_harder_pair.py  test_usc_llm_label_quality.py  test_usc_pipeline_integrity.py  test_v0_vertical_slice.py
tests/unit/: test_aggregate.py  test_cluster.py  test_corpus.py  test_corpus_benchmarks.py  test_corpus_levels.py  test_features.py  test_index.py  test_metrics.py  test_pipeline.py  test_predict.py  test_rust_smoke.py  test_split.py  test_threshold.py  test_tools.py  test_train.py
