[package]
name = "kaos-ml-core"
# Cargo SemVer pre-release — maturin emits PEP 440 "0.1.0a1" on the
# Python wheel side. Version-coupling pattern documented in
# docs/oss/30-rust-packaging/version-coupling.md (Option C).
version = "0.1.0-alpha.2"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
authors = ["273 Ventures LLC <it@273ventures.com>"]
description = "Classical ML primitives for the Kelvin Agentic OS — corpus, clustering, LLM labeling, logistic regression on the kaos-content AST"
repository = "https://github.com/273v/kaos-ml-core"
homepage = "https://kelvin.legal"
documentation = "https://docs.kelvin.legal"
readme = "README.md"
keywords = ["machine-learning", "kaos", "scikit-learn", "embeddings", "clustering"]
categories = ["science", "algorithms"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "_rust"
path = "rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
pyo3 = ["dep:pyo3"]

# v0 ships only a `version()` smoke wrapper — no other Rust dependencies
# are needed yet. v2.0+ phases land hot paths (sparse vectorizer assembly,
# sparse scalers, parallel cosine kernels) and may add `serde`, `ahash`,
# `rayon`, and a 2.x `bincode` (1.x is RUSTSEC-2025-0141 unmaintained)
# back per the kaos-nlp-core / kaos-graph dep budget.
[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py313"], optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
