[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "kaos-ml-core"
version = "0.1.0"
description = "Classical ML primitives for the Kelvin Agentic OS"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "LicenseRef-Proprietary" }
authors = [{ name = "273 Ventures LLC", email = "it@273ventures.com" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "kaos-core>=0.1.0",
    "kaos-content>=0.1.0",
    "kaos-nlp-core>=0.1.0",
    "numpy>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.8",
]

[project.optional-dependencies]
# Dense embeddings — pulls in the sibling package and (transitively) fastembed.
# Required for the v0 vertical slice.
transformers = ["kaos-nlp-transformers>=0.1.0"]
# LLM-driven labeling
llm = ["kaos-llm-core>=0.1.0"]
# MCP tools and resource templates (v1.8)
mcp = ["kaos-core>=0.1.0", "kaos-mcp>=0.1.0"]
# Phase v1.6 will add: al = ["small-text>=2.0"] (waiting on stable release)
# Phase v1.7 will add: bundle = ["skops>=0.10"]

[project.scripts]
kaos-ml = "kaos_ml_core.cli:main"
kaos-ml-serve = "kaos_ml_core.serve:main"

[dependency-groups]
dev = [
    "markdown-it-py[plugins]>=3.0",
    "maturin>=1.12.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-benchmark>=5.0",
    "ruff>=0.11",
    "ty>=0.0.1a17",
    # Integration test deps only — used by tests/integration/test_v0_vertical_slice.py
    # to extract real PDFs as ContentDocument fixtures.
    "kaos-pdf",
]

[tool.maturin]
python-source = "python"
module-name = "kaos_ml_core._rust"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: focused unit checks",
    "integration: end-to-end checks (live LLM calls, real PDFs)",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH"]
ignore = ["B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["kaos_ml_core"]

[tool.ty.src]
include = ["python/kaos_ml_core", "tests"]

[tool.uv]
package = true

[tool.uv.sources]
kaos-core = { path = "../kaos-core", editable = true }
kaos-content = { path = "../kaos-content", editable = true }
kaos-nlp-core = { path = "../kaos-nlp-core", editable = true }
kaos-nlp-transformers = { path = "../kaos-nlp-transformers", editable = true }
kaos-llm-core = { path = "../kaos-llm-core", editable = true }
kaos-mcp = { path = "../kaos-mcp", editable = true }
kaos-pdf = { path = "../kaos-pdf", editable = true }
