[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "kaos-ml-core"
# Single source of truth: Cargo.toml [package].version. Maturin reads
# Cargo SemVer (e.g. "0.1.0-alpha.1") and emits PEP 440-normalized
# wheel metadata (e.g. "0.1.0a1"). Matches the kaos-graph / kaos-nlp-core
# convention; see docs/oss/30-rust-packaging/version-coupling.md.
dynamic = ["version"]
description = "Classical ML primitives for the Kelvin Agentic OS — corpus, clustering, LLM labeling, logistic regression on the kaos-content AST"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "273 Ventures LLC", email = "it@273ventures.com" },
]
maintainers = [
  { name = "Michael Bommarito", email = "mike@273ventures.com" },
]
keywords = [
  "machine-learning",
  "scikit-learn",
  "embeddings",
  "clustering",
  "logistic-regression",
  "agentic",
  "mcp",
  "kaos",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "kaos-core>=0.1.0a1",
  "kaos-content>=0.1.0a1",
  "kaos-nlp-core>=0.1.0a1",
  # numpy 2.1 / scipy 1.14.1 are the first releases shipping CPython 3.13
  # binary wheels; pinning lower would force the lowest-direct-resolution
  # CI leg to build numpy/scipy from source and fail in CI's bare runner.
  "numpy>=2.1",
  "scipy>=1.14.1",
  "scikit-learn>=1.8",
]

# D016: extras may reference kaos-* packages not yet on PyPI; users
# requesting an extra before its companion ships get a normal pip
# resolution error with a clear message. The `[transformers]` extra is
# DEFERRED to 0.1.0a2 because kaos-nlp-transformers is not yet on PyPI;
# `uv lock` is strict and refuses to resolve a project whose declared
# extra points at an unpublished sibling. Re-add at 0.1.0a2 once
# kaos-nlp-transformers ships.
[project.optional-dependencies]
llm = ["kaos-llm-core>=0.1.0a1"]
mcp = ["kaos-mcp>=0.1.0a1"]

[project.scripts]
kaos-ml = "kaos_ml_core.cli:main"
kaos-ml-serve = "kaos_ml_core.serve:main"

[project.urls]
Homepage = "https://kelvin.legal"
Documentation = "https://docs.kelvin.legal"
Repository = "https://github.com/273v/kaos-ml-core"
Issues = "https://github.com/273v/kaos-ml-core/issues"
Changelog = "https://github.com/273v/kaos-ml-core/blob/main/CHANGELOG.md"

[dependency-groups]
# Cross-package dev baseline matches kaos-graph 0.1.0a2 (audit A2-#9):
# pytest 9.x, pytest-asyncio 1.3.x, pytest-cov 7.x, ty 0.0.34. The
# integration tier consumes published kaos-pdf to extract real-PDF
# fixtures for the v0 vertical slice.
dev = [
  "kaos-pdf>=0.1.0a1",
  "markdown-it-py[plugins]>=3.0",
  "maturin>=1.12.6",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-benchmark>=5.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "ty>=0.0.34,<0.1",
]

[tool.maturin]
python-source = "python"
module-name = "kaos_ml_core._rust"
features = ["pyo3/extension-module"]
include = [
  { path = "LICENSE", format = "sdist" },
  { path = "NOTICE", format = "sdist" },
  { path = "CHANGELOG.md", format = "sdist" },
  { path = "SECURITY.md", format = "sdist" },
]
# Strip runtime artifacts from sdist + wheel.
exclude = [
  { path = ".kaos-vfs/**", format = "sdist" },
  { path = "target/**", format = "sdist" },
  { path = ".pytest_cache/**", format = "sdist" },
  { path = ".ruff_cache/**", format = "sdist" },
  { path = ".benchmarks/**", format = "sdist" },
  { path = ".venv/**", format = "sdist" },
  { path = "htmlcov/**", format = "sdist" },
  { path = ".kaos-vfs/**", format = "wheel" },
  { path = "target/**", format = "wheel" },
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "unit: focused unit checks",
  "integration: end-to-end checks (real PDFs, real corpora)",
  "live: requires live API credentials (LLM, embeddings, search)",
  "benchmark: pytest-benchmark workloads (excluded from default unit runs)",
  "slow: tests that take >1s to run",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["kaos_ml_core"]

[tool.ty.src]
include = ["python/kaos_ml_core", "tests"]

[tool.uv]
package = true
# KMC-006: uv cache keys so the _rust extension rebuilds whenever
# pyproject.toml, Cargo.toml, or any *.rs file under the package changes.
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "**/*.rs" },
]
